# capi-provider-ssh

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTAINER_IMAGES.md  DEVELOPMENT.md  GitVersion.yml  LICENSE  README.md  cliff.toml
.github/: CODEOWNERS
docs/: architecture.md  dns-cutover.md  external-etcd.md  faq.md  flux-rollout.md  (+4 more)
python/: Dockerfile  README.md  pyproject.toml
python/capi_provider_ssh/: main.py  ssh.py
python/capi_provider_ssh/controllers/: sshcluster.py  sshhost.py  sshmachine.py
python/deploy/: deployment.yaml  namespace.yaml  rbac.yaml
python/deploy/examples/ssh-key-lifecycle/: README.md
python/deploy/examples/ssh-key-lifecycle/external-secrets/: externalsecret.yaml
python/deploy/examples/ssh-key-lifecycle/sops/: secret.sops.yaml
python/src/capi_provider_ssh/: __init__.py  main.py
python/src/capi_provider_ssh/controllers/: __init__.py  sshcluster.py  sshmachine.py
python/tests/: conftest.py  test_crd_templates.py  test_e2e_ssh_private_key_fixture.py  test_runtime_regression.py  test_ssh.py  test_sshcluster.py  test_sshhost.py  test_sshmachine.py  test_teardown_cleanup.py
python/tests/e2e/: __init__.py  conftest.py  test_bootstrap_stub.py  test_connection_lifecycle.py  test_provider_real_ssh.py  test_ssh_connectivity.py
python/tests/e2e/manifests/: capi-core-crds.yaml
python/tests/e2e/ssh-target/: Dockerfile  entrypoint.sh
python/tests/integration/: __init__.py  cleanup.py  conftest.py  helpers.py  test_sshcluster_integration.py  test_sshmachine_integration.py  test_teardown_cleanup_integration.py
(+24 files in other folders)
