[project]
name = "capi-provider-ssh"
version = "0.1.0"
description = "Cluster API infrastructure provider for SSH-reachable hosts"
readme = "../README.md"
license = "MPL-2.0"
requires-python = ">=3.13"
dependencies = [
    "kopf>=1.37,<2",
    "kubernetes>=32,<33",
    "asyncssh>=2.20,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capi_provider_ssh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
